--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous" />
     <link rel="stylesheet" href="./Assets/style.css" />
-    <script src="/Assets/script.js" name="local js"></script>
+    <script src="./Assets/config.js" name="hide api config"></script>
+    <script src="./Assets/script.js" name="local js"></script>
     <title>Weather Dashboard</title>
     </head>
 
