--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous" />
     <link rel="stylesheet" href="./Assets/style.css" />
-    <script src="./Assets/config.js" name="hide api config"></script>
-    <script src="./Assets/script.js" name="local js"></script>
     <title>Weather Dashboard</title>
     </head>
 
@@ -26,7 +24,17 @@
         </header>
         <div class="form">
             <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
+            <button id="searchBtn" type="button" class="btn btn-primary">Search</button>
         </div>
+        <!-- <div class="container-md"> -->
+        <div class="float-start">
+            <ul id="history" class="list-group list-group-flush">
+                <!-- <li id="recent1" class="list-group-item"></li>
+                <li id="recent2" class="list-group-item"></li>
+                <li id="recent3" class="list-group-item"></li> -->
+            </ul>
+        </div><br>
+        <!-- </div> -->
         <div class="card-group">
             <div id="day1" class="card">
                 <img id="img1" src="" class="card-img-top" alt="card-group-image">
@@ -91,3 +99,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" name="bootstrap+popper"></script>
     </body>
+    <script src="./Assets/config.js" name="hide api config"></script>
+    <script src="./Assets/script.js" name="local js"></script>
+<footer></footer>
+</html>
