--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <button id="searchBtn" type="button" class="btn btn-primary">Search</button>
         </div>
         <!-- <div class="container-md"> -->
-        <div class="float-start">
-            <ul id="history" class="list-group list-group-flush">
+        <div id="search-history" class="float-start">
+            <ul id="recent-list" class="list-group list-group-flush">
                 <!-- <li id="recent1" class="list-group-item"></li>
                 <li id="recent2" class="list-group-item"></li>
                 <li id="recent3" class="list-group-item"></li> -->
@@ -99,6 +99,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" name="bootstrap+popper"></script>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="./Assets/config.js" name="hide api config"></script>
     <script src="./Assets/script.js" name="local js"></script>
 <footer></footer>
