--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
                 <!-- <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
                 </div> -->
-            </div>
-            <div id="day2" class="card">
+            <!-- </div> -->
+            <!-- <div id="day2" class="card">
                 <img id="img2" src="" class="card-img-top" alt="card-group-image">
                 <div class="card-body">
                     <h5 id="dayName2" class="card-title"></h5>
                     <p id="temp2" class="card-text"></p>
                     <p id="wind2" class="card-text"></p>
                     <p id="humid2" class="card-text"></p>
-                </div>
+                </div> -->
                 <!-- <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
                 </div> -->
-            </div>
-            <div id="day3" class="card">
+            <!-- </div> -->
+            <!-- <div id="day3" class="card">
                 <img id="img3" src="" class="card-img-top" alt="card-group-image">
                 <div class="card-body">
                     <h5 id="dayName3" class="card-title"></h5>
                     <p id="temp3" class="card-text"></p>
                     <p id="wind3" class="card-text"></p>
                     <p id="humid3" class="card-text"></p>
-                </div>
+                </div> -->
                 <!-- <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
                 </div> -->
-            </div>
+            <!-- </div>
             <div id="day4" class="card">
                 <img id="img4" src="" class="card-img-top" alt="card-group-image">
                 <div class="card-body">
@@ -79,11 +79,11 @@
                     <p id="temp4" class="card-text"></p>
                     <p id="wind4" class="card-text"></p>
                     <p id="humid4" class="card-text"></p>
-                </div>
+                </div> -->
                 <!-- <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
                 </div> -->
-            </div>
+            <!-- </div>
             <div id="day5" class="card">
                 <img id="img5" src="" class="card-img-top" alt="card-group-image">
                 <div class="card-body">
@@ -91,7 +91,7 @@
                     <p id="temp5" class="card-text"></p>
                     <p id="wind5" class="card-text"></p>
                     <p id="humid5" class="card-text"></p>
-                </div>
+                </div> -->
                 <!-- <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
                 </div> -->
