--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="form">
             <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
             <button id="searchBtn" type="button" class="btn btn-primary">Search</button>
+            <button id="clear-history" type="button" class="btn btn-primary">Clear History</button>
         </div>
         <!-- <div class="container-md"> -->
         <div id="search-history" class="float-start">
