--- a/index.html
+++ b/index.html
@@ -23,16 +23,20 @@
                 </div>
             </nav>
         </header>
-        <div class="form">
-            <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
+
+        <div class="container-fluid">
+            <div class="form">
+                <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
+            </div>
         </div>
+
         <div class="card bg-dark text-dark">
-        <img src="assets/images/bs-images/img-2x1.png" class="card-img" alt="card-img-overlay">
             <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
-            </div>
+                    <img src="assets/images/bs-images/img-2x1.png" class="card-img" alt="card-img-overlay">
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Last updated 3 mins ago</p>
+                </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" name="bootstrap+popper"></script>
     </body>
