--- a/index.html
+++ b/index.html
@@ -16,17 +16,30 @@
 
     <body>
         <div class="p-3 bg-transparent text-dark">.bg-transparent</div>
-        <header>
-            <nav class="navbar fixed-top navbar-light bg-light">
-                <div class="container-fluid">
-                <a class="navbar-brand" href="#">Weather Dashboard</a>
-                </div>
-            </nav>
-        </header>
+            <header>
+                <nav class="navbar fixed-top navbar-light bg-light d-flex justify-content-center" style="height: 50px">
+                    <h1 class="text-center fs-2 fw-normal fst-italic"> Weather Dashboard </h1>
+                </nav>
+            </header>
 
         <div class="container-fluid">
-            <div class="form">
-                <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="form">
+                    <input id="city-search" class="form-control form-control-lg" type="text" placeholder="search for city here" aria-label=".form-control-lg">
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn btn-info" id="search-btn">Search</button>
+                        </div>
+                </div>
+            </div>
+            <div class="d-flex align-items-center justify-content-center" style="height: 100px">
+                <div class="">
+                    <ul class="list-group list-group-horizontal">
+                        <!-- <li class="list-group-item"></li>
+                        <li class="list-group-item"></li>
+                        <li class="list-group-item"></li> -->
+                    </ul>
+                </div>
+            </div>
             </div>
         </div>
 
