--- a/index.html
+++ b/index.html
@@ -34,22 +34,89 @@
             <div class="d-flex align-items-center justify-content-center" style="height: 100px">
                 <div class="">
                     <ul class="list-group list-group-horizontal">
-                        <!-- <li class="list-group-item"></li>
                         <li class="list-group-item"></li>
-                        <li class="list-group-item"></li> -->
+                        <li class="list-group-item"></li>
+                        <li class="list-group-item"></li>
                     </ul>
                 </div>
             </div>
             </div>
         </div>
 
-        <div class="card bg-dark text-dark">
+        <div class="container-fluid">
+            <div class="d-flex flex-row">
+                <div class="border border-light" id="today">
+                    <h2></h2>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="d-flex justify-content-center">
+                <h3 class="text-center fw-bold"> 5-Day Forecast </h3>
+            </div>
+
+            <div class="d-flex flex-row">
+                <div class="border border-light bg-light">
+                    <h4></h4>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="border border-light bg-light">
+                    <h4></h4>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="border border-light bg-light">
+                    <h4></h4>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="border border-light bg-light">
+                    <h4></h4>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="border border-light bg-light">
+                    <h4></h4>
+                    <img src="" alt="">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- <div class="card bg-dark text-dark">
             <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
                     <img src="assets/images/bs-images/img-2x1.png" class="card-img" alt="card-img-overlay">
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text">Last updated 3 mins ago</p>
                 </div>
-        </div>
+        </div> -->
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" name="bootstrap+popper"></script>
+
     </body>
+</html>
