comment out unused card-group div being kept in case design change desired later

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
 
         </div>
 
+        <!-- <div class="card-group">
+            <div id="day1" class="card">
+                <img id="img1" src="" class="card-img-top" alt="card-group-image">
+                <div class="card-body">
+                    <h5 id="dayName1" class="card-title"></h5>
+                    <p id="temp1" class="card-text"></p>
+                    <p id="wind1" class="card-text"></p>
+                    <p id="humid1" class="card-text"></p>
+            </div> -->
+
         <!-- <div class="card bg-dark text-dark">
             <div class="card-img-overlay">
                 <h5 class="card-title">Card title</h5>
