--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="container-fluid">
             <div class="d-flex justify-content-center">
-                <h3 class="text-center fw-bold"> 5-Day Forecast </h3>
+                <h3 class="text-center fw-light"> 5-Day Forecast </h3>
             </div>
 
             <div class="d-flex flex-row">
