start refactor of script.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="d-flex align-items-center justify-content-center" style="height: 100px">
                 <div class="">
-                    <ul class="list-group list-group-horizontal">
+                    <ul class="list-group list-group-horizontal" id="history">
                         <li class="list-group-item"></li>
                         <li class="list-group-item"></li>
                         <li class="list-group-item"></li>
@@ -53,7 +53,7 @@
                 </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="forecast">
             <div class="d-flex justify-content-center">
                 <h3 class="text-center fw-light"> 5-Day Forecast </h3>
             </div>
@@ -129,7 +129,7 @@
 
         <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-        
+
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>   
 
     </body>
