refactor test getCoordinates to not be async

--- a/Assets/TEST/index.html
+++ b/Assets/TEST/index.html
@@ -9,7 +9,7 @@
     <body>
         <p>Enter city name: </p>
         <form id="search-form">
-            <input type="text" id="search-input" required>
+            <input type="text" id="city-input">
                 <button type="submit" id="search-btn"> Get Weather </button>
         </form>
 
