--- a/Assets/TEST/index.html
+++ b/Assets/TEST/index.html
@@ -29,7 +29,7 @@
                 <form id="search-form">
                     <input type="text" id="city-input" class="form-control form-control-lg" placeholder="enter city">
                     <div class="d-flex justify-content-center">
-                        <button type="submit" id="search-btn"> Get Weather </button>
+                        <button type="submit" id="search-btn" class="btn btn-info"> Get Weather </button>
                     </div>
                 </form>
             </div>
@@ -58,7 +58,9 @@
     
             <div id="5day-forecast" class="container-fluid">
                 <div class="d-flex justify-content-center">
-                    <h3 class="text-center fw-light"> 5-Day Forecast </h3>
+                    <h3 class="text-center fw-light">
+                        <!-- append "This Week's Forecast" on successful search -->
+                    </h3>
                 </div>
     
                 <div class="d-flex flex-row">
@@ -70,7 +72,7 @@
                         <p></p>
                     </div>
                 </div>
-                <div class="d-flex flex-row">
+                <!-- <div class="d-flex flex-row">
                     <div class="border border-light bg-light">
                         <h4></h4>
                         <img src="" alt="">
@@ -106,7 +108,7 @@
                         <p></p>
                     </div>
                 </div>
-        </div>
+        </div> -->
 
         <script src="./script.js"></script>
 
