--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <!-- <link rel="stylesheet" href="./Assets/style.css" /> -->
     <script src="https://code.jquery.com/jquery-3.6.1.js"
     integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>   
@@ -51,7 +51,7 @@
         </div>
     </body>
     
-        <script src="./script.js"></script>
+        <script src="./Assets/script.js"></script>
         
     <footer></footer>
     </body>
