add logic for handling local storage, testing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             </form>
 
         <div class="container-fluid-row">
-            <div id="recent-searches" class=""></div>
+            <div id="recent-searches" class=""><h1 class="display-6 fw-light" id="recent-header"></h1></div>
+            <!-- items to be displayed horizontally -->
+
+            <hr>
 
             <div id="weather-current" class="p-3 col-md-9 col-sm-12">
                 <h2 id="current-header"></h2>
